--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: audioplayers_platform_interface
 description: The platform interface for audioplayers, a Flutter plugin to play multiple audio files simultaneously
-version: 6.1.0
+version: 7.1.0
 publish_to: none
 homepage: https://github.com/bluefireteam/audioplayers
 repository: https://github.com/bluefireteam/audioplayers/tree/master/packages/audioplayers_platform_interface
@@ -14,8 +14,7 @@ dependencies:
     git: https://github.com/kumsumit/plugin_platform_interface.git
 
 dev_dependencies:
-  dartdoc: ^7.0.2
-  flame_lint: ^1.1.1
+  flame_lint: ^1..0
   flutter_test:
     sdk: flutter
 
