--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,18 +6,18 @@ homepage: https://github.com/bluefireteam/audioplayers
 repository: https://github.com/bluefireteam/audioplayers/tree/master/packages/audioplayers_platform_interface
 
 dependencies:
-  collection: ^1.17.2
+  collection: ^1.18.0
   flutter:
     sdk: flutter
-  meta: ^1.9.1
+  meta: ^1.15.0
   plugin_platform_interface:
     git: https://github.com/kumsumit/plugin_platform_interface.git
 
 dev_dependencies:
-  flame_lint: ^1..0
+  flame_lint: ^1.1.1
   flutter_test:
     sdk: flutter
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
-  flutter: '>=3.13.0'
+  sdk: '>=3.7.0 <4.0.0'
+  flutter: '>=3.27.0'
